[package]
name = "vynia-bridge-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
dotenvy = "0.15.7"
envy = "0.4.2"
humantime = "2.3.0"
poise = "0.6.2"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
